# malrepo-data-science

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  Snakefile  config.yaml  conftest.py  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
airflow/: analytics_dag.py  config.py  etl_dag.py
configs/: model.yaml  pipeline.yaml
dashboards/dash/: app.py  layouts.py
dashboards/streamlit/: app.py
dashboards/streamlit/pages/: risk_analysis.py
data/: README.md
dbt/: dbt_project.yml
dbt/models/: schema.yml
dbt/models/marts/: fct_daily_metrics.sql
dbt/models/staging/: stg_transactions.sql
docker/: .dockerignore  Dockerfile.jupyter  Dockerfile.streamlit  docker-compose.yml
docs/: api-reference.md  data-dictionary.md  getting-started.md  methodology.md
notebooks/: 00_setup.ipynb  01_data_exploration.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_validation.ipynb  05_reporting.ipynb
scripts/: deploy_dashboard.py  download_data.py  generate_report.py  run_etl.py  setup_env.sh  train_models.py
sql/: analytics.sql  etl.sql  reports.sql  schema.sql
src/: __init__.py
src/api/: app.py
src/data/: extractors.py  loader.py  preprocessing.py
src/features/: build_features.py  selection.py
src/models/: timeseries.py  trainer.py  visualization.py
src/utils/: config.py  logging.py
src/visualization/: dashboards.py
tests/: test_api.py  test_data.py  test_features.py  test_models.py
tests/fixtures/: mock_responses.json  sample_data.csv
