[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finanalytics"
version = "2.1.0"
description = "Financial data science platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "FinAnalytics Team", email = "team@finanalytics.dev"}]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "PyYAML>=6.0",
    "boto3>=1.33.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]
dashboard = [
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
]
airflow = [
    "apache-airflow>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
